# rpc

./: README.md  build.sh  run.sh  test.sh
data/: data.csv  gen.sh
grpc/cxx/: .dockerignore  .gitignore  Dockerfile-client  Dockerfile-server  Makefile  client.cc  compile-docker  rpcbench.proto  server.cc
grpc/java/: .gitignore  Dockerfile-client  Dockerfile-server  build.gradle  compile-docker  server
grpc/java/src/main/java/com/rpcbench/grpc/: Db.java  Entry.java  RpcbenchClient.java  RpcbenchServer.java
grpc/ruby/: .dockerignore  .gitignore  Dockerfile-client  Gemfile  client  client.rb  compile  compile-docker  server.rb
json/cxx/: .gitignore  CMakeLists.txt  Dockerfile-client  Dockerfile-server  client.cc  compile-docker  server.cc  spec.json
json/cxx/cmake/: FindJsonrpccpp.cmake
json/java/: build.gradle  client  compile  compile-docker  settings.gradle
json/java/src/main/java/com/rpcbench/jsonrpc/: Db.java  Entry.java  RpcbenchClient.java  RpcbenchServer.java
json/ruby/: Gemfile  client.rb  compile  compile-docker  server  server.rb
xml/cxx/: CMakeLists.txt  Dockerfile-client  Dockerfile-server  client.cc  compile-docker  server.cc
xml/java/: .dockerignore  build.gradle  compile-docker
xml/java/gradle/wrapper/: gradle-wrapper.properties
xml/java/src/main/java/com/rpcbench/xmlrpc/: Db.java  Entry.java  RpcbenchClient.java  RpcbenchServer.java
xml/ruby/: Dockerfile-server  Gemfile  client.rb  compile-docker  server.rb
